# aptus-open

./: Dockerfile  flake.nix  pyproject.toml  secrets.toml.sample
.github/workflows/: docker-publish.yml
aptus_open/: lib.py  main.py
